--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,11 @@
+logging.level.ru.yandex.practicum=debug
+logging.level.org.springframework.web.servlet.DispatcherServlet=debug
+server.error.include-message=always
+server.error.include-exception=true
+server.error.include-stacktrace=on_param
+#DB
 spring.sql.init.mode=always
-# ? jdbc-url ???????, ??? ?????? ????? ????????? ? ????
-spring.datasource.url=jdbc:h2:file:./db/filmorate
+spring.datasource.url=jdbc:h2:file:./db/filmorate;AUTO_SERVER=TRUE
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
