--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,18 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.jooq</groupId>
+			<artifactId>jool</artifactId>
+			<version>0.9.15</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.simpleflatmapper</groupId>
+			<artifactId>sfm-jdbc</artifactId>
+			<version>8.2.3</version>
+		</dependency>
+
+		<dependency>
 			<groupId>org.zalando</groupId>
 			<artifactId>logbook-spring-boot-starter</artifactId>
 			<version>2.16.0</version>
